yml/Resource-quota.yml



#    ****************     RESOURCE QUOTA    ***********************

#  NOTE:: ----------  RESOURCE QUOTA is always set to the Namespace. ------------
#         Limt range is only applicabe for  {PODS ,, CONTAINERS ,, STRORAGE}.
# 'Resource at the container level'  &  'ResourceQuota at the Namespace level'

#  using ResourceQuota we can limit the resource consumeptions per namespace.

# NOW WE CREATE NAMESPACE  'testns' :---
# kubectl create ns testns   
# kubectl get namespace
# kubectl get all -n testns 
# kubectl get quota -n testns
# kubectl get resoucequota -n testns     
# kubectl get rs 
# kubectl get rs  my-rs -n testns   
# kubectl ge events -n testns           ( showing what happend )                      

#------------------------------------------------------------------------------------------------------------------------
# -------- $$$$$$$$$$$ 'RESOURCE QUOTA'
# -------- { we create  resource quota  and  limitrange }   &    {  now we create  Replicaset  and service}    
# vi myresource-quota-limit-range.yml
---
kind: Service    
apiVersion: v1
metadata:
  name: my-svc  # ----- service name
  namespace: testns # -- if your namespace already exsist  & uwant to create pod in ''testn''
spec:
  type: NodePort   #--- Specifies the service type   i.e:-  ClusterIP(inside)  or  NodePort(outside)
  selector:
    app: myapp #--$$$$ #---- Apply this service to any pods which has the specific label
  ports:
    - port: 80        # service port     Containers port exposed
      targetPort: 8080     # container's port   
...
#-------------------------------------------------------------------------------------------------------------------------------








---
apiVersion: v1
kind: Pod
metadata:
  name: resources    # --- pod name  
spec:
  containers:
  - name: resource
    image: centos
    command: ["/bin/bash", "-c", "while true; do echo Technical-Guftgu; sleep 5 ; done"]
    resources:        ## ---- Request & Limit                                     
      requests:    # --------------------------------REQUEST
        memory: "64Mi"
        cpu: "100m"
      limits:      # --------------------------------MAX LIMITS    { LIMITS >> REQUESTS }
        memory: "128Mi"
        cpu: "200m"        ## limit hameha zyda hogi requst se
...
